@@ -98,6 +98,9 @@ void
 rsvg_start_filter_primitive_flood (RsvgHandle * ctx,
 								   const xmlChar ** atts);
 
+void
+rsvg_start_filter_primitive_displacement_map (RsvgHandle * ctx, const xmlChar ** atts);
+
 G_END_DECLS
 
 #endif
